--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -34,22 +34,30 @@ Researchers have examined a variety of environmental variables for their correla
 <!-- objective of the paper -->
 In this paper, we revisit the analysis of environmental covariates that correlate with oil sardine catch using data from 1983 to 2015 on seasonal landings and environmental conditions from remote-sensing.  Based on biological information concerning how environmental conditions in the coastal waters affect spawning density, exposure of sardines to the coastal fishery, and larval and juvenile sardine survival, we develop a set of hypotheses about which remote-sensing covariates should correlate with current or future landings.  We use generalized additive modelling of the landing data with remote-sensing covariates to test for these correlations.  
 
+## Study area and oil sardine life history
+
 <!-- study area -->
-We focus on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998; @Vivekanandanetal2003]. This area is in the Southeast Arabian Sea (SEAS), one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the SEAS, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the near-shore and off-shore and high primary productivty and chlorophyll in this region [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the inter-monsoon period [@Madhupratapetal2001].
+Our analysis focuses on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998; @Vivekanandanetal2003]. This area is in the Southeast Arabian Sea (SEAS), one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the SEAS, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the near-shore and off-shore and high primary productivty and chlorophyll in this region [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the inter-monsoon period [@Madhupratapetal2001].
 
 <!-- life cycle of the oil sardine -->
 The life cycle  of the oil sardine fishery begins with the entry of adult fish into the inshore areas during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969] and restricted along the narrow strip of the western India continental shelf, within 20 km from the shore. The fish migrate from offshore to coastal waters and vice versa coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950]. According to Nair et al. [-@Nairetal2016], the exact location of oil sardine spawning grounds along the Indian coastline is still unclear; however, it is generally believed that the spawning of oil sardine occurs during the southwest monsoon period (Jun-Jul) when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008], although some studies suggest that spawning can occur as late as  September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970].
 
-After eggs are spawned, they develop rapidly into larvae within 24 hrs [@Nair1959].  Variation in the bloom initiation time and intensity lead to changes in the food supply to sardine larvae and corresponding changes in their growth rate and survival and the later recruitment of sardines into the fishery [@Georgeetal2012].  The phytoplankton bloom that provides for sardine larvae food is dependent upon coastal upwelling.    Oil sardines grow rapidly during the first few months and mature to full size during the first 2.5 years. 
+After eggs are spawned, they develop rapidly into larvae within 24 hrs [@Nair1959].  The phytoplankton bloom that provides for sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers. The blooms start in the south in June, increase in intensity and spread northward up the coast [@Smitha2010]. Oil sardines grow rapidly during their first few months and can reach 40mm with 2 months (reference). Variation in the bloom initiation time and intensity lead to changes in the food supply to sardine larvae and corresponding changes in their growth rate and survival and the later recruitment of 0-year sardines into the fishery [@Georgeetal2012]. During March to May, the inshore waters warm considerably and sardines move off-shore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.
 
-The age at first maturity occurs at less than one year, at about 150 mm size, and the range of sardines that are fished typically range from 150-220 mm in size and 1-2.5 years old. On the southwest coast, the oil sardine fishery commences soon after the outbreak of monsoon in June and continues until March-April. Along the Kerala coast catches are fairly high throughout the year except during March-May (Figure `r ref("fig:catch")`). Along the west coast, the length composition of catches ranges between 50- 220mm. Virgin spawners (140-160 mm) enter the fishery on the Kerala coast during June/July and as the season progresses to September-December, adults occur in reduced quantities and catches are dominated by age-1 juveniles (120-140 mm) that were spawned in the prior season (citation). Seasons of rainfall extremes (weak or intense) cause recruitment failure, while a daily rainfall of 20-30 mm during June-August along the southwest coast may indicate good recruitment to the fishery (citation).
+The age at first maturity occurs at less than one year, at about 150 mm size. Spawning begins during the southwest monsoon period (June-July) when temperature, salinity and suitable food availability are conducive for larval survival and continues into September [@MurtyEdelman1966; @JayaprakashPillai2000;  @Krishnakumaretal2008].  The exact location of oil sardine spawning grounds along the Indian coastline is still unclear [@Nair2016].  The fishery is closed during June to mid-July, and when it commences in mid-July, it is dominated by 1-2.5 year old fish that have recently spawned (spent).  In August a spike of 0-year (40mm) juveniles from the June spawning ofter appears in the catch and another spike of 0-year fish is sometimes seen in February from the last fall spawning.  Overall, catches along the Kerala coast are fairly high throughout the year except during March-May (Figure `r ref("fig:catch")`). 
 
-<!-- What is happening each quarter -->
-Catch is reported quarterly not monthly.
+<!-- What is happening each quarter 
+Catch is reported quarterly not monthly. Along the west coast, the length composition of catches ranges between 50-220mm. 1st year spawners (140-160 mm) enter the fishery during June/July and as the season progresses to September-December, adults occur in reduced quantities and catches are dominated by age-1 juveniles (120-140 mm) that were spawned in the prior season (citation). Seasons of rainfall extremes (weak or intense) cause recruitment failure, while a daily rainfall of 20-30 mm during June-August along the southwest coast may indicate good recruitment to the fishery (citation).
+-->
 
 <!--
 As the success of commercial fishery for each season is determined by the number of juveniles recruited at the beginning of the same season, rainfall, which affects spawning success, has been used to forecast the strength of juvenile brood entering the fishery. Though earlier studies have shown that most of spawning activity occurs in the near-shore area or in the mouths of estuaries, there are observations of eggs and larvae in the shelf region even at 200m depth (citation). Also, studies from other upwelling ecosystems (citation), have shown that the planktonic stage larvae accumulate in frontal zones as well as in river plumes. Studies from Bakun (citation), Bakun and English (citation), Cury and Roy (citation) etc. explain the linkage to the atmospheric and oceanic processes based on number of hypothesis like Optimal environment window, Match-mismatch hypothesis etc. Also, the changes in the fishery in either short term or long term is explained for other similar theories such as population expansion (Mac Call's hypothesis) and the Wasp waist hypothesis.
 -->
+
+## Hypotheses
+
+
+
 
 <!-- SST is known to be important in Pacific sardine -->
 [@JacobsonMacCall1995; @Checkleyetal2009; @McClatchieetal2010; @LindegrenCheckley2012; @Checkleyetal2017]
@@ -58,8 +66,6 @@ As the success of commercial fishery for each season is determined by the number
 Remote sensing satellites can be used to detect changes in ocean physical, biological and chemical properties, such as surface temperature, winds, surface height, surface waves, rainfall and surface salinity, as well as the ecosystem and water quality changes. These tools are relevant for fisheries management (IOCCG 2009; citation?) as well as development of predictive capabilities.  Add more discussion regarding prior work/references on using satellite data to predict oil sardine catch.  Satellite chlorophyll, SST and SSH have been used to estimate sardine habitat of the west coast of the USA [@Zwolinskietal2011]. In the last few years, satellite measurements of chlorophyll have been used to predict high densities of oil sardines.  This is used a functional tool for producing forecasts for fisherman and has lead to increases in their efficiency (catch per unit effort) (citation)
 -->
 
-
-## Hypotheses
 
 Based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of sardines to the coastal fishery, we develop a set of hypotheses about which remote-sensing covariates in which months should correlate with landings in specific quarters. 
 
